Adding functionalities for signing in and registering in user. closes #2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+#Datasource Configurations:
+spring.datasource.url=jdbc:mysql://localhost:3306/reservation
+spring.datasource.username=root
+spring.datasource.password=1032005
 
+#JPA Configurations
+spring.jpa.show-sql=true
+spring.jpa.hibernate.use-new-id-generator-mappings= false
+
+#Spring MVC Configurations
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+#Spring Servlet Context Path
+server.servlet.context-path=/flightreservation
+
+#Spring Mail Server Configurations
+#spring.mail.host=smtp.gmail.com
+##spring.mail.port=587
+##spring.mail.username=spring.test.mail.server
+##spring.mail.password=Kmam787347
+##spring.mail.properties.mail.smtp.starttls.enable=true
+##spring.mail.properties.mail.smtp.starttls.required=true
+##spring.mail.properties.mail.smtp.auth=true
