Adding email support. closes #11

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,10 @@ spring.mvc.view.suffix=.jsp
 server.servlet.context-path=/flightreservation
 
 #Spring Mail Server Configurations
-#spring.mail.host=smtp.gmail.com
-##spring.mail.port=587
-##spring.mail.username=spring.test.mail.server
-##spring.mail.password=Kmam787347
-##spring.mail.properties.mail.smtp.starttls.enable=true
-##spring.mail.properties.mail.smtp.starttls.required=true
-##spring.mail.properties.mail.smtp.auth=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=spring.test.mail.server
+spring.mail.password=Kmam787347
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
