changing the logging level to info

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,4 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
 
 #Spring Logging Configurations
-logging.level.root=ERROR
+logging.level.root=INFO
