--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,4 @@ spring.mail.properties.mail.smtp.auth=true
 
 #Spring Logging Configurations
 logging.level.root=INFO
+logging.file.name=/Users/mohammed/Documents/Logs/flightreservation.log
