Create logback xml file. closes #18

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,5 +24,5 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
 
 #Spring Logging Configurations
-logging.level.root=INFO
-logging.file.name=/Users/mohammed/Documents/Logs/flightreservation.log
+logging.pattern.file=%d %p %c{1.} [%t] %m%n
+logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
