--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,5 +24,11 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
 
 #Spring Logging Configurations
+#logging.file.name=/Users/mohammed/Documents/Logs/flightreservation.log
 logging.pattern.file=%d %p %c{1.} [%t] %m%n
 logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
+
+#Custom Properties Configurations
+itinerary.dirpath=src/main/resources/reservations/
+email.subject=Itinerary for your Flight
+email.body=Please find your itinerary attached
