--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>flight-reservation</name>
     <description>Flight Reservation Application</description>
+    <packaging>war</packaging>
 
     <properties>
         <java.version>1.8</java.version>
